# dangerous-ai

./: .gitignore  .mise.toml  CLAUDE.md  GEMINI.md  README.md  setup.ps1  test-sandbox.wsb  test-setup.ps1  test-wrapper.ps1
.github/workflows/: ci.yml  generate-demo.yml  test-environment-setup.yml  test-mac-setup.yml  test-windows-setup.yml
config/: config.json
docs/: demo.tape
examples/nyc-congestion-pricing/: .gitignore  .mise.toml  CLAUDE.md  README.md  pyproject.toml
examples/nyc-congestion-pricing/notebooks/: data-validation.ipynb  example.ipynb  visualizations.ipynb  visualizations.py
examples/nyc-congestion-pricing/src/nyc_congestion_pricing/: __init__.py
examples/outputs/: schema_documentation.json
scripts/: publish.ts  setup-mcp.sh  setup.ps1  setup.sh  setup.ts
