[project]
name = "nyc-congestion-pricing"
version = "0.1.0"
description = ""
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0.0",
    "duckdb>=1.0.0",
    "playwright>=1.40.0",
    "jupyter>=1.0.0",
    "papermill>=2.6.0",
    "plotly>=5.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pyarrow>=14.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.1.0",
]
